[story-864390425] Update version to 1.0.0 (merge request !90)